name:                haskell-lsp-test
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Bubba/haskell-lsp-test#readme
license:             BSD3
license-file:        LICENSE
author:              Luke Lau
maintainer:          luke_lau@icloud.com
copyright:           2018 Luke Lau
category:            Testing
build-type:          Simple
cabal-version:       >=2.0
extra-source-files:  README.md

library
  hs-source-dirs:      lib
  exposed-modules:     Language.Haskell.LSP.Test
                     , Language.Haskell.LSP.Test.Replay
                     , Language.Haskell.LSP.Test.Machine
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , haskell-lsp-types
                     , haskell-lsp >= 0.3
                     , haskell-lsp-test-internal
                     , aeson
                     , bytestring
                     , containers
                     , data-default
                     , directory
                     , filepath
                     , lens
                     , parser-combinators
                     , text
                     , unordered-containers
                     , yi-rope

  ghc-options:         -W

library haskell-lsp-test-internal
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Language.Haskell.LSP.Test.Compat
                       Language.Haskell.LSP.Test.Decoding
                       Language.Haskell.LSP.Test.Exceptions
                       Language.Haskell.LSP.Test.Files
                       Language.Haskell.LSP.Test.Messages
                       Language.Haskell.LSP.Test.Parsing
                       Language.Haskell.LSP.Test.Script
                       Language.Haskell.LSP.Test.Server
                       Language.Haskell.LSP.Test.Session
  build-depends:       base
                     , haskell-lsp-types
                     , haskell-lsp >= 0.3
                     , aeson
                     , ansi-terminal
                     , async
                     , bytestring
                     , conduit
                     , conduit-parse
                     , containers
                     , data-default
                     , directory
                     , filepath
                     , lens
                     , mtl
                     , scientific
                     , parser-combinators
                     , process
                     , text
                     , transformers
                     , unordered-containers
                     , yi-rope
  if os(windows)
    build-depends:     Win32
  else
    build-depends:     unix
  ghc-options:         -W


executable lsp-test
  hs-source-dirs:     lsp-test
  main-is:            Main.hs
  default-language:   Haskell2010
  build-depends:      base >= 4.7 && < 5
                    , haskell-lsp-types
                    , haskell-lsp >= 0.3
                    , haskell-lsp-test-internal
                    , haskell-lsp-test
                    , aeson
                    , bytestring
                    , directory
                    , filepath
                    , text
                    , unordered-containers
                    , scientific

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  hs-source-dirs:      test
  ghc-options:         -W
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , lens
                     , data-default
                     , directory
                     , haskell-lsp-test
                     , haskell-lsp-test-internal
                     , haskell-lsp
                     , haskell-lsp-types
                     , conduit
                     , conduit-parse
                     , aeson
                     , unordered-containers
                     , text
  other-modules:       ParsingTests
  default-language:    Haskell2010

executable lsp-test-example
  hs-source-dirs:      example
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , haskell-lsp-test
                     , haskell-lsp-types
                     , lens
                     , text
                     , directory
